# fastapi-amis

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
api/components/: index.html
api/core/: index.html
api/extensions/: index.html
best-practices/development/: index.html
best-practices/project-structure/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: components.md  core.md  extensions.md
docs/best-practices/: development.md  project-structure.md
docs/getting-started/: examples.md  first-app.md  installation.md
docs/guide/: amis-components.md  concepts.md  site-configuration.md  views-and-routers.md
example/: exception_example.py  simple_example.py
fastapi_amis/: __init__.py
fastapi_amis/amis/: components.py
fastapi_amis/core/: router.py  site.py  views.py
fastapi_amis/extensions/: exception.py
getting-started/examples/: index.html
getting-started/first-app/: index.html
getting-started/installation/: index.html
guide/amis-components/: index.html
guide/concepts/: index.html
guide/site-configuration/: index.html
guide/views-and-routers/: index.html
search/: search_index.json
